<resources>
    <string name="app_name">TechniciansAssistant</string>
    <string name="main_header">The Technicians Assistant</string>
    <string name="Zeus_calculator_button">Zeus Calculator(cnc)</string>
    <string name="electrical_circuit_simulator">Electrical Circuit Simulator</string>   //TODO: make electrical circuit simulator
    <string name="electronic_circuit_simulator">Electronic Circuit Simulator</string>   //TODO: make electronic circuit simulator
    <string name="pneumatic_circuit_simulator">Pneumatic Circuit Simulator</string>     //TODO: make pneumatic circuit simulator
    <string name="hole_amount">How many points does your shape have?</string>
    <string name="radius_or_pcd">Are you working with a radius or a diameter?</string>
    <string name="radius_question">Please enter the radius:</string>
    <string name="diameter_question">Please enter the diameter:</string>
    <string name="centerpointx_question">What is the X coordinate of the centerpoint?</string>
    <string name="centpointy_question">What is the Y coordinate of the centerpoint?</string>
    <string name="radius_or_diameter_dropdown">Choose one:</string>
    <string-array name="r_and_d_dropdown_options">
        <item>radius</item>
        <item>diameter</item>
    </string-array>
</resources>