<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zeus_calculator">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/zeus_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Zeus_calculator_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/holecount_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hole_amount" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="enter value between 1-12"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radius_or_pcd" />

        <Spinner
            android:id="@+id/r_or_d_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/r_and_d_dropdown_options"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter value:" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="radius/diameter"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centerpointx_question" />

        <EditText
            android:id="@+id/editTextNumberDecimal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter X coordinate here"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centpointy_question" />

        <EditText
            android:id="@+id/editTextNumberDecimal4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Y coordinate here"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>